--- a/sysadmin_base/views/hr_employee_views.xml
+++ b/sysadmin_base/views/hr_employee_views.xml
@@ -15,6 +15,7 @@
             </div>
             <page name="public" position="after">
                 <page name="internal_tools" string="Internal Tools" groups="sysadmin_base.group_sysadmin_sysadmin">
+                    <button string="Edit Internal Tools" name="action_button_internal_tools" type="object" groups="sysadmin_base.group_sysadmin_sysadmin"/>
                     <group>
                         <field name="has_voip_switchboard_access"/>
                         <field name="is_trainee"/>
@@ -35,7 +36,7 @@
                             </field>
                         </page>
                         <page name="employee_workspaces" string="Workspaces">
-                            <field name="workspace_ids" context="{'default_employee_id': active_id}">
+                            <field name="workspace_ids">
                                 <tree>
                                     <field name="name"/>
                                     <field name="description"/>
