--- a/sysadmin_base/views/workspace_item_views.xml
+++ b/sysadmin_base/views/workspace_item_views.xml
@@ -88,7 +88,7 @@
                             <field name="sn"/>
                         </group>
                         <group>
-                            <field name="product_id"/>
+                            <field name="product_id" context="{'default_internal_equipment':1,'default_sale_ok':0,'default_type':'product'}"/>
                         </group>
                         <group>
                             <field name="workspace_id"/>
