--- a/sysadmin_base/views/workspace_workspace_views.xml
+++ b/sysadmin_base/views/workspace_workspace_views.xml
@@ -60,7 +60,7 @@
                                     <field name="description"/>
                                     <field name="amount" sum="Total amount"/>
                                     <field name="sn"/>
-                                    <field name="product_id"/>
+                                    <field name="product_id" context="{'default_internal_equipment':1,'default_sale_ok':0,'default_type':'product'}"/>
                                     <field name="subsidy_id"/>
                                 </tree>
                             </field>
